<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="hs__app_review_button">REVIEW</string>
    <string name="hs__attach_screenshot_btn">Attach Screenshot</string>
    <string name="hs__attach_screenshot_button">ATTACH</string>
    <string name="hs__ca_msg">We&apos;re happy to help you!</string>
    <string name="hs__change_btn">Change</string>
    <string name="hs__chat_hint">Type your message</string>
    <string name="hs__confirmation_footer_msg">Thanks for messaging us!</string>
    <string name="hs__confirmation_msg">Did we answer all your questions?</string>
    <string name="hs__contact_us_btn">CONTACT US</string>
    <string name="hs__conversation_detail_error">Please describe your problem</string>
    <string name="hs__conversation_end_msg">This conversation has ended.</string>
    <string name="hs__conversation_header">Conversation</string>
    <string name="hs__conversation_started_message">Your message has been received. Thanks for contacting us!</string>
    <string name="hs__could_not_open_attachment_msg">No apps can perform this action.</string>
    <string name="hs__could_not_reach_support_msg">Unable to reach support</string>
    <string name="hs__cr_msg">What else can we help you with?</string>
    <string name="hs__csat_additonal_feedback_message">Any other feedback (optional)</string>
    <string name="hs__csat_dislike_message">Hated It!</string>
    <string name="hs__csat_like_message">Loved It!</string>
    <string name="hs__csat_message">What&apos;s your feedback about our customer support?</string>
    <string name="hs__csat_option_message">or</string>
    <string name="hs__csat_ratingbar">Please rate our service.</string>
    <string name="hs__csat_submit_toast">Thanks for rating us.</string>
    <string name="hs__data_not_found_msg">Data not found</string>
    <string name="hs__default_notification_content_title">Support</string>
    <string name="hs__description_invalid_length_error">Please describe further so that we can help better</string>
    <string name="hs__dm_video_loading">Loading Video…</string>
    <string name="hs__done_btn">Done</string>
    <string name="hs__email_hint">Email (optional)</string>
    <string name="hs__email_required_hint">Email</string>
    <string name="hs__empty_section">Sorry! No questions available in this section.</string>
    <string name="hs__faq_fetching_fail_message">Unable to load FAQs at this moment. Please retry in a while…</string>
    <string name="hs__faq_header">FAQ</string>
    <string name="hs__faqs_search_footer">No FAQs found.</string>
    <string name="hs__feedback_button">Send Feedback</string>
    <string name="hs__fetching_faqs_message">Getting your answers…</string>
    <string name="hs__file_not_found_msg">File not found</string>
    <string name="hs__file_type_audio">Audio</string>
    <string name="hs__file_type_csv">CSV</string>
    <string name="hs__file_type_ms_office">Office doc</string>
    <string name="hs__file_type_pdf">PDF</string>
    <string name="hs__file_type_rtf">RTF</string>
    <string name="hs__file_type_text">TXT</string>
    <string name="hs__file_type_unknown">File</string>
    <string name="hs__file_type_video">Video</string>
    <string name="hs__help_header">Help</string>
    <string name="hs__image_not_available">Image not available</string>
    <string name="hs__invalid_description_error">Invalid description</string>
    <string name="hs__invalid_email_error">Please enter a valid email</string>
    <string name="hs__mark_helpful_toast">Question has been marked as Helpful</string>
    <string name="hs__mark_no">NO</string>
    <string name="hs__mark_unhelpful_toast">Question has been marked as Not Helpful</string>
    <string name="hs__mark_yes">YES</string>
    <string name="hs__mark_yes_no_question">Was this helpful?</string>
    <string name="hs__network_error_msg">Oops! Something went wrong</string>
    <string name="hs__network_unavailable_msg">Network not available.</string>
    <string name="hs__new_conversation_btn">START A NEW CONVERSATION</string>
    <string name="hs__new_conversation_header">New Conversation</string>
    <string name="hs__new_conversation_hint">How can we help?</string>
    <string name="hs__no_search_results_message">Whoops! We couldn&apos;t find anything for query</string>
    <string name="hs__notification_content_text">RE:</string>
    <string name="hs__permission_denied_message">Storage permission is required to access screenshots and download attachments</string>
    <string name="hs__permission_denied_snackbar_action">Settings</string>
    <string name="hs__permission_not_granted">Application does not have permission to access your photos</string>
    <string name="hs__permission_rationale_snackbar_action_label">OK</string>
    <string name="hs__question_header"></string>
    <string name="hs__question_helpful_message">You found this helpful.</string>
    <string name="hs__question_unhelpful_message">You didn&apos;t find this helpful.</string>
    <string name="hs__rate_button">Rate</string>
    <string name="hs__remove_screenshot_btn">Remove Screenshot</string>
    <string name="hs__retry_faq_fetching_button">RETRY</string>
    <string name="hs__review_accepted_message">You accepted review request.</string>
    <string name="hs__review_close_button">Close</string>
    <string name="hs__review_message">If you love our app, please take a moment to rate it</string>
    <string name="hs__review_request_message">Would you like to review the App on Play Store?</string>
    <string name="hs__review_title">Rate Our App</string>
    <string name="hs__screenshot_add">Add</string>
    <string name="hs__screenshot_cloud_attach_error">Error attaching screenshot. Please choose an image available locally on the device.</string>
    <string name="hs__screenshot_limit_error">Screenshot size should not exceed %.2f MB</string>
    <string name="hs__screenshot_remove">Remove</string>
    <string name="hs__screenshot_sent_msg">Screenshot sent</string>
    <string name="hs__screenshot_upload_error_msg">Error uploading screenshot</string>
    <string name="hs__search_footer">Can&apos;t find what you were looking for?</string>
    <string name="hs__search_hint">Describe your problem</string>
    <string name="hs__search_result_message">Questions that may already have your answer</string>
    <string name="hs__search_result_title">Suggestions</string>
    <string name="hs__search_title">Search</string>
    <string name="hs__select_a_question_message">Please select a question from left</string>
    <string name="hs__send_anyway">SEND ANYWAY</string>
    <string name="hs__send_msg_btn">Send</string>
    <string name="hs__sending_fail_msg">Message not sent. Touch to retry.</string>
    <string name="hs__sending_msg">Sending…</string>
    <string name="hs__solved_btn">Yes, solved!</string>
    <string name="hs__starting_download">Starting download…</string>
    <string name="hs__submit_conversation_btn">Submit</string>
    <string name="hs__unsolved_btn">No, unsolved</string>
    <string name="hs__username_blank_error">Please enter a valid name</string>
    <string name="hs__username_hint">Your Name</string>
    <string name="hs__screen_type">10-inch-tablet</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">New! You&apos;re in control - choose what info you want to share with apps.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
</resources>