<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="?android:windowBackground" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center_horizontal" android:id="@id/csat_message" android:paddingLeft="@dimen/activity_horizontal_margin_medium" android:paddingTop="@dimen/activity_horizontal_margin_large" android:paddingRight="@dimen/activity_horizontal_margin_medium" android:paddingBottom="@dimen/activity_horizontal_margin_large" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs__csat_message" android:layout_centerHorizontal="true" />
    <RatingBar android:id="@id/ratingBar" android:paddingTop="@dimen/activity_vertical_margin_medium" android:paddingBottom="@dimen/activity_vertical_margin_medium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/activity_horizontal_margin_medium" android:stepSize="1.0" android:layout_below="@id/csat_message" android:layout_centerHorizontal="true" android:contentDescription="@string/hs__csat_ratingbar" style="@style/Helpshift.Style.RatingBar" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/ratingBar">
        <View android:background="?hs__separatorColor" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <TextView android:paddingLeft="@dimen/activity_horizontal_margin_small" android:paddingRight="@dimen/activity_horizontal_margin_small" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hs__csat_option_message" />
        <View android:background="?hs__separatorColor" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <View android:id="@id/csat_like_msg" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" />
        <View android:id="@id/csat_dislike_msg" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" />
        <View android:id="@id/option_text" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" />
    </LinearLayout>
</RelativeLayout>