<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res-auto" app:orientation="vertical" app:background="?unknown_attr_ref: 1010054" app:layout_width="match_parent" app:layout_height="match_parent" app:isScrollContainer="true">
    <FrameLayout app:layout_width="match_parent" app:layout_height="wrap_content">
        <LinearLayout app:orientation="vertical" app:paddingLeft="@dimen/activity_horizontal_margin_medium" app:paddingTop="@dimen/activity_horizontal_margin_large" app:paddingRight="@dimen/activity_horizontal_margin_medium" app:paddingBottom="@dimen/activity_horizontal_margin_large" app:layout_width="match_parent" app:layout_height="wrap_content">
            <EditText app:textSize="@dimen/hs__textSizeLarge" app:textColor="?unknown_attr_ref: 1010036" app:textColorHint="?unknown_attr_ref: 101009a" app:id="@+id/hs__conversationDetail" app:scrollbars="vertical" app:layout_width="match_parent" app:layout_height="wrap_content" app:hint="@string/hs__new_conversation_hint" app:maxLines="@integer/hs__chat_max_lines" app:minLines="@integer/hs__conversation_detail_lines" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" />
            <EditText app:textSize="@dimen/hs__textSizeLarge" app:textColor="?unknown_attr_ref: 1010036" app:textColorHint="?unknown_attr_ref: 101009a" app:id="@+id/hs__username" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/activity_horizontal_margin_small" app:hint="@string/hs__username_hint" app:singleLine="true" />
            <EditText app:textSize="@dimen/hs__textSizeLarge" app:textColor="?unknown_attr_ref: 1010036" app:textColorHint="?unknown_attr_ref: 101009a" app:id="@+id/hs__email" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/activity_horizontal_margin_small" app:hint="@string/hs__email_hint" app:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" />
            <android.support.v7.widget.CardView app:id="@+id/screenshot_view_container" app:background="?attr/hs__attachmentBackgroundColor" app:visibility="gone" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/activity_horizontal_margin_large" app:cardCornerRadius="4dp" app:elevation="2dp">
                <ImageView app:id="@+id/hs__screenshot" app:background="0x106000b" app:visibility="visible" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0xa001" app:scaleType="centerCrop" app:layout_alignParentTop="true" />
                <LinearLayout app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="horizontal" app:background="0x1060000" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x3801">
                    <ImageView app:id="@+id/attachment_icon" app:visibility="visible" app:layout_width="UNKNOWN_DATA_0x1801" app:layout_height="UNKNOWN_DATA_0x1801" app:layout_marginLeft="@dimen/activity_horizontal_margin_medium" app:src="@drawable/hs__attachment_icon" app:scaleType="fitCenter" app:tint="?attr/colorAccent" />
                    <LinearLayout app:orientation="vertical" app:layout_width="UNKNOWN_DATA_0x1" app:layout_height="wrap_content" app:layout_marginLeft="@dimen/activity_horizontal_margin_medium" app:layout_weight="1.0">
                        <TextView app:textSize="@dimen/hs__textSizeMedium" app:textColor="?unknown_attr_ref: 1010036" app:ellipsize="marquee" app:id="@+id/attachment_file_name" app:layout_width="wrap_content" app:layout_height="wrap_content" app:maxLines="1" app:singleLine="true" />
                        <TextView app:textSize="@dimen/hs__textSizeSmall" app:textColor="?unknown_attr_ref: 1010038" app:id="@+id/attachment_file_size" app:layout_width="wrap_content" app:layout_height="wrap_content" />
                    </LinearLayout>
                    <ImageButton app:id="0x102001a" app:background="0x106000d" app:layout_width="UNKNOWN_DATA_0x1801" app:layout_height="UNKNOWN_DATA_0x1801" app:layout_marginLeft="@dimen/activity_horizontal_margin_medium" app:layout_marginRight="@dimen/activity_horizontal_margin_medium" app:src="@drawable/hs__screenshot_clear" app:text="@string/hs__remove_screenshot_btn" app:contentDescription="@string/hs__remove_screenshot_btn" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <ProgressBar app:id="@+id/progress_bar" app:visibility="gone" style="@style/Helpshift_Style_QuestionLoadProgress" />
    </FrameLayout>
</ScrollView>
